--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_detail">DetailActivity</string>
+
+
+    <string name="detail_beer_photo">Beer Photo</string>
+
+
+    <string name="detail_breweries_photo">Breweries Photo</string>
 </resources>
