arreglado la perdida de like con la insercción

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
 
 
     <string name="detail_breweries_photo">Breweries Photo</string>
+    <string name="title_activity_score">ScoreActivity</string>
 </resources>
