--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,15 @@
 <resources>
     <string name="app_name">Beermecum</string>
 
-    <string name="hello_world">Hello world!</string>
     <string name="action_score">Score</string>
     <string name="action_share">Share</string>
-    <string name="title_activity_detail">DetailActivity</string>
+    <string name="title_activity_detail">Detail</string>
 
 
     <string name="detail_beer_photo">Beer Photo</string>
 
 
     <string name="detail_breweries_photo">Breweries Photo</string>
-    <string name="title_activity_score">ScoreActivity</string>
+    <string name="title_activity_score">Score</string>
+    <string name="backgroundimage">background image</string>
 </resources>
